# Spectral-Clara-Lux-Tracer

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  appveyor.yml
.github/ISSUE_TEMPLATE/: Bug_report.md
Apple/OSX/: AppDelegate.h  AppDelegate.mm  Info.plist  MainViewController.h  MainViewController.mm  main.m
Apple/OSX/Assets.xcassets/AppIcon.appiconset/: Contents.json
Apple/OSX/Assets.xcassets/disco.imageset/: Contents.json
Apple/OSX/Assets.xcassets/ivl.imageset/: Contents.json
Apple/OSX/Base.lproj/: Main.storyboard
Apple/SCLT.xcodeproj/: project.pbxproj
Apple/SCLT.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Apple/SCLT.xcodeproj/xcshareddata/xcschemes/: SCLTOSX-Debug.xcscheme  SCLTOSX-Release.xcscheme  SCLTiOS-Debug.xcscheme  SCLTiOS-Release.xcscheme
Apple/SCLTFramework/SCLTFramework.xcodeproj/: project.pbxproj
Apple/SCLTFramework/SCLTFramework.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Apple/SCLTFramework/SCLTFramework.xcodeproj/xcshareddata/xcschemes/: SCLTFrameworkOSX.xcscheme  SCLTFrameworkOSXTests.xcscheme  SCLTFrameworkiOS.xcscheme  SCLTFrameworkiOSTests.xcscheme
Apple/SCLTFramework/SCLTFrameworkCommon/: ProgressDelegate.h
Apple/SCLTFramework/SCLTFrameworkCommon/Rasterizer/: Rasterizer.h  Rasterizer.mm
Apple/SCLTFramework/SCLTFrameworkCommon/Support/: Support.h  Support.mm
Apple/SCLTFramework/SCLTFrameworkOSX/: Info.plist  SCLTFrameworkOSX.h
Apple/SCLTFramework/SCLTFrameworkOSXTests/: SCLTFrameworkOSXTests.mm
Apple/SCLTFramework/SCLTFrameworkiOS/: SCLTFrameworkiOS.h
Apple/SCLTFramework/SCLTFrameworkiOSTests/: SCLTFrameworkiOSTests.mm
Apple/iOS/: AppDelegate.h  AppDelegate.mm  Info.plist  MainViewController.h  MainViewController.mm  main.m
Apple/iOS/Base.lproj/: Main.storyboard
Apple/iOS/Images.xcassets/AppIcon.appiconset/: Contents.json
Apple/iOS/Images.xcassets/disco.imageset/: Contents.json
Apple/iOS/Images.xcassets/ivl.imageset/: Contents.json
SCLT/: CMakeLists.txt  Constants.hpp  SCLT.cpp  SCLT.hpp  Spectrum.hpp  main.cpp
SCLT/Camera/: Camera.cpp  Camera.hpp  ViewPlane.hpp
SCLT/Color/: ChromaticAdaptationTransform.cpp  ChromaticAdaptationTransform.hpp  ColorMatchingFunction.hpp  Illuminant.hpp  MacbethColorChecker.hpp  TestColorSamples.hpp  sRGB.hpp
SCLT/Color/CIEColorSpaces/: CIELab.cpp  CIELab.hpp  CIEUCS.cpp  CIEUCS.hpp  CIEUVW.cpp  CIEUVW.hpp  CIEXYZ.cpp  CIEXYZ.hpp
SCLT/Color/CRI/: ColorRenderingIndex.cpp  ColorRenderingIndex.hpp
SCLT/Lights/: AreaLight.cpp  AreaLight.hpp  Light.hpp  ShadowCalculator.cpp  ShadowCalculator.hpp
SCLT/Math/: MathUtils.hpp  Matrix.cpp  Matrix.hpp  Point3D.cpp  Point3D.hpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp  SphericalCoordinate.cpp  SphericalCoordinate.hpp  Vector3D.cpp  Vector3D.hpp
SCLT/Objects/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.hpp  Fresnel.cpp  Fresnel.hpp  Intersection.hpp  Model.cpp  Model.hpp  Polygon.cpp  Polygon.hpp  PolygonalMesh.cpp  PolygonalMesh.hpp  Sphere.cpp  Sphere.hpp  Square.cpp  Square.hpp
SCLT/Objects/BRDF/EmpiricalModel/: EmpiricalBRDF.cpp  EmpiricalBRDF.hpp  EmpiricalBRDFModel.hpp
SCLT/Objects/BRDF/PhysicalModel/: BRDF.cpp  BRDF.hpp  Lambertian.cpp  Lambertian.hpp  Measured.cpp  Measured.hpp  OrenNayar.cpp  OrenNayar.hpp  SpecularReflection.cpp  SpecularReflection.hpp  SpecularTransmission.cpp  SpecularTransmission.hpp  TorranceSparrow.cpp  TorranceSparrow.hpp
SCLT/Objects/Material/: Material.cpp  Material.hpp  MaterialBRDF.cpp  MaterialBRDF.hpp  MaterialRGB.cpp  MaterialRGB.hpp
SCLT/Objects/ObjParser/: ObjParser.cpp  ObjParser.hpp
SCLT/Objects/Scene/: Scene.cpp  Scene.hpp
SCLT/Objects/Scene/tinyxml2/: tinyxml2.cpp
SCLT/Objects/Skyboxes/: CubeMappingSkybox.cpp  CubeMappingSkybox.hpp
SCLT/Rays/: Ray.cpp  Ray.hpp  ShadowRay.cpp  ShadowRay.hpp
SCLT/Shading/: PathBRDF.cpp  PathBRDF.hpp  ShadingModel.hpp  ShadingModelFactory.cpp  ShadingModelFactory.hpp  ShadingModelType.hpp  ShadingRGBModel.hpp  ShadingSpectrumModel.cpp  ShadingSpectrumModel.hpp  Whitted.cpp  Whitted.hpp  WhittedBRDF.cpp  WhittedBRDF.hpp
SCLT/Textures/: Texture.cpp  Texture.hpp
SCLT/Textures/ProceduralTextures/BumpMapping/: BumpMap.cpp  BumpMap.hpp
SCLT/Textures/ProceduralTextures/PerlinNoise/: PerlinNoise.cpp  PerlinNoise.hpp
SCLT/Textures/ProceduralTextures/PerlinTextures/: PerlinTexture.cpp  PerlinTexture.hpp
SCLT/Textures/ProceduralTextures/PerlinTextures/Marble/: MarbleTexture.cpp  MarbleTexture.hpp
SCLT/Textures/ProceduralTextures/PerlinTextures/Turbulence/: TurbulenceTexture.cpp  TurbulenceTexture.hpp
SCLT/Textures/lodepng/: lodepng.cpp  lodepng.h
SCLT/Tracers/: PathTracer.cpp  PathTracer.hpp  Tracer.cpp  Tracer.hpp  TracerModelFactory.cpp  TracerModelFactory.hpp  TracerModelType.hpp  TracerRGB.cpp  TracerRGB.hpp  TracerSpectrum.cpp  TracerSpectrum.hpp
SCLT/Utils/: PathReader.cpp  PathReader.hpp  StringUtils.cpp  StringUtils.hpp
SCLT/UtilsCommandLine/: pch.h
Scenes/: 0.xml  1-command-line.xml  1.xml  10-command-line.xml  10.xml  11-command-line.xml  11.xml  12.xml  12a-dragon-lambertian-command-line.xml  12b-dragon-torrancesparrow-command-line.xml  2.xml  3-command-line.xml  3.xml  4-command-line.xml  4.xml  5-command-line.xml  5.xml  6-command-line.xml  6.xml  7-command-line.xml  7.xml  8-command-line.xml  8.xml  9-command-line.xml  9.xml
Scenes/BRDFs/: acryl_blue.astm  cayman.astm  garnet_red.astm  krylon_blue.astm
Scenes/OBJs/: Bunny.blend  Cube.blend  Dragon.blend  Suzanne.blend
Windows/: SCLT.sln
Windows/Tests/: Package.appxmanifest  Tests.vcxproj  Tests.vcxproj.filters  Tests_TemporaryKey.pfx  UnitTest.cpp  UnitTestApp.xaml  UnitTestApp.xaml.cpp  UnitTestApp.xaml.h  pch.h
Windows/Tests/Generated Files/: UnitTestApp.g.h  UnitTestApp.g.hpp  UnitTestApp.xaml  UnitTestApp.xbf  XamlTypeInfo.g.cpp
Windows/Windows/: App.xaml  App.xaml.cpp  App.xaml.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  SCLT.vcxproj  SCLT.vcxproj.filters  SCLT_TemporaryKey.pfx  Support.h  pch.h
Windows/Windows/Rasterizer/: Rasterizer.cpp  Rasterizer.h
